noinst_HEADERS = \
                          cell.h\
                          cell_impl.h \
                          column.h\
                          column_impl.h \
                          cube.h\
                          cube_impl.h \
                          cubebuffer.h\
                          cubebuffer_impl.h \
                          filtermanagement.h\
                          functionmanagement.h\
                          functionmanagement_impl.h \
                          histogramexception.h\
                          histogramstatistic.h\
                          index.h\
                          index_impl.h \
                          intervalcompose.h\
                          intervalcontrolderived.h\
                          intervalcpu.h\
                          intervalderived.h\
                          interval.h\
                          intervalhigh.h\
                          intervalnotthread.h\
                          intervalshift.h\
                          intervalthread.h\
                          keventdrivencutter.h\
                          keventtranslator.h\
                          kfilter.h\
                          khistogram.h\
                          khistogramtotals.h\
                          kprogresscontroller.h\
                          krecordlist.h\
                          ktrace.h\
                          ktracecutter.h \
                          ktraceeditactions.h \
                          ktraceeditsequence.h \
                          ktraceeditstates.h \
                          ktracefilter.h \
                          ktraceoptions.h \
                          ktraceshifter.h \
                          ktracesoftwarecounters.h \
                          kwindowexception.h\
                          kwindow.h\
                          matrix.h\
                          matrix_impl.h\
                          memoryblocks.h\
                          memorytrace.h\
                          noloadblocks.h\
                          noloadexception.h\
                          noloadtrace.h\
                          ParaverMetadataManager.h \
                          plainblocks.h\
                          plaintrace.h\
                          plaintypes.h\
                          semanticcomposefunctions.h\
                          semanticcompose.h\
                          semanticcpufunctions.h\
                          semanticcpu.h\
                          semanticderivedfunctions.h\
                          semanticderived.h\
                          semanticexception.h\
                          semanticfunction.h\
                          semantichigh.h\
                          semanticinfo.h\
                          semanticmanagement.h\
                          semanticnotthreadfunctions.h\
                          semanticnotthread.h\
                          semanticthreadfunctions.h\
                          semanticthread.h\
                          statisticmanagement.h\
                          tracebodyiofactory.h\
                          tracebodyio_v2.h\
                          tracebodyio_csv.h\
                          traceeditblocks.h\
                          traceheaderexception.h\
                          tracestream.h\
                          vectorblocks.h\
                          vectortrace.h\
                          vectortracedefines.h
