
pkglib_LTLIBRARIES = libparaver-kernel.la
libparaver_kernel_la_SOURCES = \
    bplustreeblocks.cpp \
    bplustree.cpp \
    bplustreeexception.cpp \
    bplustreerecordleaf.cpp \
    filtermanagement.cpp \
    histogramexception.cpp \
    histogramstatistic.cpp \
    intervalcompose.cpp \
    intervalcontrolderived.cpp \
    intervalcpu.cpp \
    intervalderived.cpp \
    intervalnotthread.cpp \
    intervalshift.cpp \
    intervalthread.cpp \
    keventdrivencutter.cpp \
    keventtranslator.cpp \
    kfilter.cpp \
    khistogram.cpp \
    khistogramtotals.cpp \
    kprogresscontroller.cpp \
    krecordlist.cpp \
    ktrace.cpp \
    ktracecutter.cpp \
    ktraceeditactions.cpp \
    ktraceeditsequence.cpp \
    ktraceeditstates.cpp \
    ktracefilter.cpp \
    ktraceoptions.cpp \
    ktraceshifter.cpp \
    ktracesoftwarecounters.cpp \
    kwindow.cpp \
    kwindowexception.cpp \
    memorytrace.cpp \
    noloadblocks.cpp \
    noloadexception.cpp \
    noloadtrace.cpp \
    paraverkernelexception.cpp \
    ParaverMetadataManager.cpp \
    plainblocks.cpp \
    plaintrace.cpp \
    processmodel.cpp \
    resourcemodel.cpp \
    semanticcomposefunctions.cpp \
    semanticcpufunctions.cpp \
    semanticderivedfunctions.cpp \
    semanticexception.cpp \
    semanticmanagement.cpp \
    semanticnotthreadfunctions.cpp \
    semanticthreadfunctions.cpp \
    statisticmanagement.cpp \
    tracebodyiofactory.cpp \
    tracebodyio_v1.cpp \
    tracebodyio_v2.cpp \
    tracebodyio_csv.cpp \
    traceeditblocks.cpp \
    traceheaderexception.cpp\
    tracestream.cpp
          
noinst_HEADERS = \
    cell.cpp \
    column.cpp \
    cube.cpp \
    cubebuffer.cpp \
    functionmanagement.cpp \
    index.cpp \
    matrix.cpp

# Erases everything which should not be uploaded to CVS
mrproper: distclean
	rm -fr Makefile.in
