EXTRA_DIST = \
	event_description.h \
	event_encoding.h \
	event_list.h \
	events.h \
	MPI_EventEncoding.h \
	papi_events.h \
	paraverstatisticfunctions.h \
	ptools_prv_types.h \
	ptools_types.h \
	vectorutils.h 

# Erases everything which should not be uploaded to CVS
mrproper: distclean
	rm -fr Makefile.in
