SUBDIRS = old

EXTRA_DIST = \
	debug.h \
	ParaverTraceConfigGrammar.h \
	ParaverTraceConfigGrammar.ipp \
	ParaverTraceConfig.h \
	ParaverTraceConfig.ipp \
	UIParaverTraceConfig.h \
	UIParaverTraceConfig.ipp \
	UIParaverTraceConfig_python.h
	ParaverTraceConfig.cpp \
	UIParaverTraceConfig.cpp \
	UIParaverTraceConfig_python.cpp

# Erases everything which should not be uploaded to CVS
mrproper: distclean
	rm -fr Makefile.in
