EXTRA_DIST = \
	LibException.h \
	ParaverEventType.h \
	ParaverEventValue.h \
	ParaverGradientColor.h \
	ParaverGradientNames.h \
	ParaverState.h \
	ParaverStatesColor.h \
	ParaverTraceConfigGrammar.h \
	ParaverTraceConfig.h \
	LibException.cpp \
	ParaverEventType.cpp \
	ParaverEventValue.cpp \
	ParaverGradientColor.cpp \
	ParaverGradientNames.cpp \
	ParaverState.cpp \
	ParaverStatesColor.cpp \
	ParaverTraceConfig.cpp \
	ParaverTraceConfigGrammar.cpp

# Erases everything which should not be uploaded to CVS
mrproper: distclean
	rm -fr Makefile.in
